# rust-todo

./: .gitignore  README.md  api.Dockerfile  docker-compose-db.yml  docker-compose.yml  web.Dockerfile
api/: Cargo.toml
api/src/: configs.rs  ctx.rs  main.rs  state.rs
api/src/global_structs/: api_error.rs  api_result.rs  ctx.rs  mod.rs
api/src/middlewares/: context_resolver.rs  mod.rs
api/src/models/: main.rs
api/src/models/todo/: create.rs  delete.rs  get.rs  list.rs  mod.rs  structs.rs  update.rs
api/src/models/user/: list.rs
api/src/routes/: mod.rs  todo.rs  user.rs
api/tests/routes/: main.rs
api_old/: Cargo.toml_old
api_old/src/: ctx.rs  main.rs
api_old/src/configs/: db.rs
api_old/src/middlewares/: context_resolver.rs
api_old/src/models/: main.rs  mod.rs
api_old/src/models/todo/: add.rs  list.rs  mod.rs  structs.rs
api_old/src/routes/: mod.rs  todo.rs
e2e/: package-lock.json  package.json
e2e/cypress/e2e/: AddTodo.cy.js  HomeTodo.cy.js
e2e/cypress/e2e/samples/: AccessPages.cy.js  CreateAccount.cy.js  Login.cy.js  LoginLanguages.cy.js
web/: package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
web/src/: App.vue
web/src/assets/sass/: _global.scss  _palette.scss
web/src/assets/sass/components/: _listInput.scss  _listItem.scss  _todoTitle.scss
web/src/components/: Edit.vue  Input.vue  List.vue  ListItem.vue  Title.spec.ts  Title.vue
web/src/composables/: useEventBus.spec.ts  useEventBus.ts
web/src/services/: todo.ts
web/src/stores/: counter.ts  todos.spec.ts  todos.ts
web/src/views/: Home.vue
(+1 files in other folders)
