[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6"
axum-macros = "0.3.7"
tower-http = { version = "0.4.0", features = ["cors"] }
mongodb = { version = "2.6.0", default-features = false, features = ["async-std-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"

[build]
target = ["x86_64-unknown-linux-gnu"]

[profile.dev]
opt-level = 3
overflow-checks = false
debug = 0